--- a/UI/HuddleChat/StageView/stageview.scss
+++ b/UI/HuddleChat/StageView/stageview.scss
@@ -121,7 +121,7 @@
                     "second fifth" 
                     "third fifth";
 
-                #{$huddle-chat}-user {
+                #{$huddle-chat}__user {
 
                     &:nth-child(2) {
                         grid-area: second;
